feat(tm): add opencode completion and use tmux -F for session listings
- Replace usages of `tmux list-sessions -f '#s' 2>/dev/null` with `tmux list-sessions -F \#S` for the `start` and `kill` completions to produce reliable session names and avoid shell redirection in the YAML completion file.
- Add `opencode` subcommand completion (`--help`).

Why: ensures correct tmux formatting/escaping in the completion file and adds completion support for the new `opencode` subcommand.

--- a/.sh/completions/tm.yaml
+++ b/.sh/completions/tm.yaml
@@ -1,16 +1,18 @@
 tm:
   - start:
       - --switch:
-          - $(tmux list-sessions -f '#s' 2>/dev/null)
+          - $(tmux list-sessions -F \#S)
       - --aux
   - detach:
       - --help
   - editor:
+      - --help
+  - opencode:
       - --help
   - quads:
       - --help
   - git:
       - --help
   - kill:
-      - $(tmux list-sessions -f '#s' 2>/dev/null)
+      - $(tmux list-sessions -F \#S)
       - --all
