chore(tmux): uncomment unbind directives to clear key tables on reload
Uncommented the four unbind lines for the prefix, root, copy-mode, and
copy-mode-vi key tables in .tmux.conf.

Why:
- Ensures all previous bindings are removed before applying new ones.
- Makes the config reload (bind b source-file ...) deterministic and avoids
  duplicate or stale keybindings interfering with expected behavior.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # Reload binding should come AFTER prefix definition
-# unbind -a -T prefix
-# unbind -a -T root
-# unbind -a -T copy-mode
-# unbind -a -T copy-mode-vi
+unbind -a -T prefix
+unbind -a -T root
+unbind -a -T copy-mode
+unbind -a -T copy-mode-vi
 
 bind b source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
