feat(history): add hst completions, update atuin filters, and switch abbreviations
- Add completions for `hst` (delete/search errors & sync) to enable shell completion for new history helper commands.
- Update .config/atuin/config.toml history_filter to ignore common flags (-h, --help, -v, --version) and noisy commands (task, tmux, where) so noisy/irrelevant commands don't pollute history.
- Replace old `hh`/atuin wrapper workflow by removing the deprecated .sh/lib/atuin.sh and updating abbreviations:
  - add `hde` -> `hst delete errors`, `hds` -> `hst delete search`, `hs` -> `hst sync`
  - remove the old `hhs`/`hhe` abbreviations.
- Motivation: reduce noise in history, provide proper completions for the new `hst` helper, and simplify/modernize the history-management workflow.

--- a/.config/atuin/config.toml
+++ b/.config/atuin/config.toml
@@ -4,12 +4,19 @@
 ## For details on the supported regular expression syntax, see
 ## https://docs.rs/regex/latest/regex/#syntax
 history_filter = [
+  "--help",
+  "--version",
+  "-h",
+  "-v",
   "^cat ",
   "^cd ",
   "^clear",
   "^ls ",
   "^nvim ",
   "^rm",
+  "^task",
+  "^tmux",
+  "^where ",
   "^which ",
   "^z ",
 ]
