chore(completions): update tm CLI completions
- Replace `--help` completions with `--new` for `editor`, `opencode`, `quads`, and `git` to match the command's current behavior.
- Remove the `--switch` dynamic session expansion (`$(tmux list-sessions -F #S)`) to avoid executing shell commands during completion generation and to reduce brittleness/escaping issues.
- Preserve `--aux` for `start` and keep `kill` completions (`$(tmux list-sessions -F #S)` and `--all`) intact.

Why:
- Aligns completions with the actual CLI semantics.
- Improves reliability and safety by avoiding runtime shell expansions in the YAML completions.

--- a/.sh/completions/tm.yaml
+++ b/.sh/completions/tm.yaml
@@ -1,18 +1,16 @@
 tm:
   - start:
-      - --switch:
-          - $(tmux list-sessions -F \#S)
       - --aux
   - detach:
       - --help
   - editor:
-      - --help
+      - --new
   - opencode:
-      - --help
+      - --new
   - quads:
-      - --help
+      - --new
   - git:
-      - --help
+      - --new
   - kill:
       - $(tmux list-sessions -F \#S)
       - --all
